--- a/view/docManager.html
+++ b/view/docManager.html
@@ -104,9 +104,9 @@
 </div>
 <div class="footer" style="margin-top:2rem;">
 </div>
-<div id="pageCover" class="coverLayer" style="background:rgba(58,58,58,0.4);position:fixed;">
+<div id="pageCover" class="coverLayer" style="background:rgba(58,58,58,0.4);position:fixed;display:none;">
     <div class="addDoc" style="position:relative;">
-        <div class="addDocCover coverLayer" style="z-index:99;background:rgba(218,218,218,0.4);">
+        <div class="addDocCover coverLayer" style="z-index:99;background:rgba(218,218,218,0.4);display:none;">
             <i class="fa fa-spinner fa-spin fa-3x" style="margin:auto;"></i>
         </div>
         <div style="margin:1rem;display:flex;flex-direction:column;">
