updates on the tutorial and draf on projectInfo page

--- a/view/tutorial/introtool.html
+++ b/view/tutorial/introtool.html
@@ -93,8 +93,8 @@
     <p>基本保持一个客户一个账号的原则，如果该客户在客户信息中没有开设FTP账户，或已开设的FTP账户失效，需要联系IT人员进行重新分配。</p>
     <p>可依照自己的喜好使用自己习惯使用的FTP传输工具。</p>
     <table style="margin-left:2rem;">
-        <tr><td>公网地址</td><td>ftp.cidanaash.com</td></tr>
-        <tr><td>内部访问地址</td><td>ftp://ftp.cidanash.com:8021</td></tr>
+        <tr><td>公网地址</td><td>ftp.cidanash.com</td><td></td></tr>
+        <tr><td>内部访问地址</td><td>ftp://ftp.cidanash.com:8021</td><td>FileZilla连接</br>端口：8021</td></tr>
     </table>
 
     <h2>市场分析管理类</h2>
