updates the draft

--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -225,7 +225,9 @@
                 <td>
                     <div style="text-align:center;"><a href="{{doc | docLink:'1'}}" target="_blank"><img src="{{doc | docIcon}}" style="width:1.2rem;"></a></div>
                     <div ng-if="doc.link == ''"><button class="simpleBtnRight" ng-click="edit(doc)">ADD</button></div></td>
-                <td history-doc-list draft="{{doc.draft}}"></td>
+                <td history-doc-list draft="{{doc.draft}}">
+
+                </td>
                 <td content-format contents="{{doc.reference}}" style="width:15rem;"></td>
             </tr>
         </table>
