--- a/view/tutorial/introaccount.html
+++ b/view/tutorial/introaccount.html
@@ -57,7 +57,18 @@
     <h2>账号列表</h2>
     <table id="accountTable">
         <tr><td>账号类型</td><td>网站地址</td><td>账号</td><td>备注</td></tr>
+        <tr><td>项目特供</td><td><a href="">STParc</a></td><td>
+                <div class="dashLine"></div>
+                <table>
+                    <tr><td>username:</td><td><span>christina.li@cidana.com</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
+                    <tr><td colspan="4"></td></tr>
+                    <tr><td>password:</td><td><span>C!LxEE208</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
+                </table>
+            </td>
+            <td>ST项目中用来查询invoice支付情况的网站。</td>
+        </tr>
         <tr><td>项目特供</td><td><a href="175.98.100.75/redmine/login">redmine</a></td><td>
+            <div class="dashLine"></div>
             <table>
                 <tr><td>username:</td><td><span>emma.lu@cidana.com</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
                 <tr><td colspan="4"></td></tr>
