updates on account

--- a/view/tutorial/introaccount.html
+++ b/view/tutorial/introaccount.html
@@ -57,7 +57,7 @@
     <h2>账号列表</h2>
     <table id="accountTable">
         <tr><td>账号类型</td><td>网站地址</td><td>账号</td><td>备注</td></tr>
-        <tr><td>项目特供</td><td><a href="">STParc</a></td><td>
+        <tr><td>项目特供</td><td><a href="https://my.st.com/stparc">STParc</a></td><td>
                 <div class="dashLine"></div>
                 <table>
                     <tr><td>username:</td><td><span>christina.li@cidana.com</span></td><td><button onclick="copyPrev(this)">COPY</button></td></tr>
