--- a/view/accountManager.html
+++ b/view/accountManager.html
@@ -33,9 +33,12 @@
         margin-bottom:0.5rem;
     }
 
-    #projectTable tr:nth-child(1) td{
+    #projectTable tr{
         border-top:1px solid lightgray;
         border-bottom:1px solid lightgray;
+    }
+	
+    #projectTable tr:nth-child(1) td{
         background: rgba(152,75,67,0.8);
         color:white;
     }
@@ -69,7 +72,7 @@
     </div>
 </div>
 <div id="main">
-    <div class="topBtnRow"><button onclick="showPageCover(20)" class="addDocBtn">添加客户</button></div>
+    <div class="topBtnRow"><button onclick="showPageCover(22)" class="addDocBtn">添加客户</button></div>
     <table id="projectTable">
         <tr><td>Name</td><td>Alias</td><td>Parent</td><td style="text-align:center;">Priority</td><td style="text-align:center;">Country</td><td>Website</td><td>Description</td></tr>
         <tr ng-repeat="entry in contents.entries">
@@ -112,6 +115,7 @@
                     <i class="fa fa-spinner fa-spin" ng-show="parentSearching"></i>
                     <select style="opacity:0;position:absolute;left:0;z-index:99" ng-model="newAccount.parrent"></select>
                 </td></tr>
+				<tr><td>供应商</td><td style="display:flex;flex-direction:row;"><input type="checkbox" ng-model="newAccount.type" style="width:1rem;height:1rem;padding-bottom:8px;"><div style="margin-left:0.5rem;">Tick it if it is a supplier</span></td></tr>
                 <tr><td>优先级</td><td>
                     <select ng-model="newAccount.priority">
                         <option value="1">1</option>
