--- a/view/projectManager.html
+++ b/view/projectManager.html
@@ -52,6 +52,7 @@
         <a href="/doc" target="_blank">ASSET</a>
         <a href="/account" target="_blank">ACCOUNT</a>
         <a href="/tutorial" target="_blank">REFERENCE</a>
+        <a><button ng-click="logout()">LOGOUT</button></a>
     </div>
 </div>
 <div id="main">
