--- a/view/docManager.html
+++ b/view/docManager.html
@@ -120,7 +120,8 @@
                     <option value="1">SOW(工作内容确认书)</option>
                     <option value="2">SLA(合同与合同修订)</option>
                     <option value="3">Royalty(季度产量报告)</option>
-                    <option value="4">invoice(财务收据)</option>
+                    <option value="4">Invoice(财务收据)</option>
+                    <option value="6">Payment(入账凭证)</option>
                     <option value="5">reference(参考文章)</option>
                 </select></td></tr>
                 <tr><td>客户</td><td>
