--- a/view/docManager.html
+++ b/view/docManager.html
@@ -79,6 +79,8 @@
                         invoice
                     <% }else if(entries[i].type === 5){ %>
                         reference
+                    <% }else if(entries[i].type === 6){ %>
+                        Receipt
                     <% } %>
                 </td>
                 <td style="overflow:hidden;">
