--- a/view/accounting.html
+++ b/view/accounting.html
@@ -20,6 +20,36 @@
     <script src="/js/accountingCon.js"></script>
 </head>
 <style>
+    .closeBtn{
+        border:none;
+        background:none;
+        color:rgba(55,55,55,1);
+    }
+
+    .closeBtn:hover{
+        color:rgba(152,75,67,1);
+        cursor:pointer;
+    }
+
+    .header_button{
+        background:none;
+        border:solid 1px rgba(185,185,185,1);
+        color:inherit;
+        transition:background 0.25s, border-bottom 0.15s;
+        border-radius:5px;
+        padding:0.3rem;
+        margin-top:0.3rem;
+        margin-bottom:0.3rem;
+
+    }
+
+    .header_button:hover{
+        background:rgba(215,215,215,0.4);
+        color:rgba(152,75,67,1);
+        border: solid 1px rgba(152,75,67,1);
+        cursor:pointer;
+    }
+
     #projectTable{
         margin-left:auto;
         margin-right:auto;
@@ -106,27 +136,28 @@
     .entryTable tr:first-child td{
         padding-top:0.5rem;
         padding-bottom:0.5rem;
-
     }
 
-    #filterBoard{
-        width:10rem;
+    .entryTable tr td:nth-child(3){
+        max-width:14rem;
+    }
+
+    .float-board{
         position:absolute;
+        transition:height 0.15s ease-out, opacity 0.25s;
+        height:0;
+        opacity:0;
+        z-index:99;
         outline:solid 1px rgba(180,180,180,1);
         outline-offset:-1px;
-        border-radius:5px;
         background:white;
-        transition:height 0.25s ease-out;
-        height:0;
         display:flex;
         flex-direction:column;
         overflow:hidden;
-        z-index:99;
+        border-radius:5px;
     }
 
-    #filterBoard >button{
-        height:2rem;
-        line-height:2rem;
+    .float-board >button{
         text-align:left;
         border:none;
         background:white;
@@ -134,6 +165,15 @@
         padding-left:1.5rem;
         display:flex;
         flex-direction:row;
+    }
+
+    #filterBoard{
+        width:10rem;
+    }
+
+    #filterBoard>button{
+        height:2rem;
+        line-height:2rem;
     }
 
     #filterBoard >button i{
@@ -144,11 +184,41 @@
 
     #filterBoard >button:hover{
         background:rgba(152,75,67,0.4);
+        color:rgba(152,75,67,1);
         cursor:pointer;
+    }
+
+    #companySearchBoard {
+        width:10rem;
+        left: 8.5rem;
+        top: -10px;
+        padding-top:0.5rem;
+    }
+
+    #companySearchBoard >button{
+        height:1rem;
+        line-height:1rem;
+    }
+
+    #companySearchBoard >button:hover{
+        background:rgba(215,215,215,0.4);
+        cursor:pointer;
+    }
+
+
+    #main_records{
+        display:flex;
+        flex:1;
+        padding-top:2rem;
+        padding-left:2rem;
+        padding-right:2rem;
+        flex-direction:column;
+        transition:opacity 0.35s;
+        opacity:0;
     }
 </style>
 <body ng-app="dashboard"
-      ng-controller="accountCon">
+      ng-controller="accountCon" ng-click="onClick($event)">
 <info-receiver  ng-init="pageId = '<%= pageId %>';
                          userId ='<%= user._id %>'"></info-receiver>
 <div id="header">
@@ -165,11 +235,23 @@
         <button ng-repeat="option in options" ng-click="changePage(option.id)" ng-disabled="option.id === pageIndex">{{option.name}}</button>
     </div>
     <div id="main_area" ng-controller="mainController" style="display:flex;flex-direction:column;display:flex;flex:1;">
-        <div><button ng-click="switchFilter()">STATUS</button></div>
-        <div style="height:1rem;position:relative;"><div id="filterBoard">
-            <button ng-repeat="stat in status" ng-click="selectStat(stat.index,$event)">{{stat.name}}</button>
-        </div></div>
-        <div id="main_records" style="display:flex;flex:1;padding-top:2rem;flex-direction:column;transition:opacity 0.35s;opacity:0;">
+        <div style="display:flex;flex-direction:row;padding-left:4rem;min-height:2rem;border-bottom:solid 1px rgba(205,205,205,1);">
+            <button id="statusButton" class="header_button" ng-click="switchFilter($event)">STATUS</button>
+            <div style="position:relative;margin-left:0.5rem;margin-top:auto;margin-bottom:auto;">
+                <input id="currentCompanyName" placeholder="company name" ng-model="searchName" ng-change="searchCompany()">
+                <button style="position:absolute;right:5px; top:4px;" class="closeBtn" ng-show="company !== null" ng-click="clearCompany()"><i class="fas fa-times-circle"></i></button>
+            </div>
+        </div>
+        <div style="height:1rem;position:relative;padding-left:4rem;">
+            <div id="filterBoard" class="float-board" index="status">
+                <button ng-repeat="stat in status" ng-click="selectStat(stat.index,$event)">{{stat.name}}</button>
+            </div>
+            <div id="companySearchBoard" class="float-board" index="account" >
+                <i class="fa fa-spinner fa-spin" style="margin:auto;" ng-show="companyRequesting"></i>
+                <button ng-repeat="account in accountList" ng-click="selectCompany(account,$event)">{{account.name}}</button>
+            </div>
+        </div>
+        <div id="main_records">
 
         </div>
         <div class="pageCount" id="pageCount" style="margin-top:auto;margin-bottom:1.5rem;">
