--- a/view/tutorial/maintenanceperformance.html
+++ b/view/tutorial/maintenanceperformance.html
@@ -4,45 +4,53 @@
     <p>本篇主要为项目经理给团队人员的评分标准提供参考，评分可按照下列标准。</p>
 
     <h3>人员KPI评价标准：</h3>
-    <p>项目的KPI评价标准如下</p>
-    <ul style="margin-left:2rem;">
-        <li>成功完成所分派任务，计<b>80分</b>;</li>
-        <li>超额完成被分配的任务，对项目推进做出了相应的贡献，酌情添加<b>0.5分</b>等，上不封顶;</li>
-        <ul>
-            <li>完成项目阶段性任务(milestone)，增加<b>1分</b></li>
-            <li>该期间工作量大或节奏强度高，酌情增加<b>0.5-1分</b></li>
-            <ul>
-                <li><button onclick="expandLayer(this)">-</button>bug修复阶段：</li>
-                <ul style="display:none;">
-                    <li>单个项目修复量<b>≥10人天</b>，增加<b>1分</b></li>
-                    <li>在此基础上每增加<b>10人天</b>工作量，每项目增加<b>0.5分</b>;</li>
-                </ul>
-                <li><button onclick="expandLayer(this)">-</button>开发性阶段</li>
-                <ul style="display:none;">
-                    <li>总工作量超过<b>30人天</b>，在投入最多项目上增加<b>0.5分</b></li>
-                </ul>
-            </ul>
-            <li>主动承担他人的工作并成功完成，对项目推进有贡献的，增加<b>0.5分</b></li>
-        </ul>
-        <li>在项目的进程中为公司做出额外贡献者，酌情增加<b>0.5-1.5分</b>;</li>
-        <ul>
-            <li>简化了公司项目工作流程、减少时间成本的，增加<b>0.5分</b></li>
-            <li>研究前沿技术，及时响应市场需求的， 增加<b>0.5分</b></li>
-            <li>修复了产品线上的general bug,提升产品质量的，增加<b>0.5分</b></li>
-        </ul>
-        <li>在团队协作上做出了杰出贡献者，增加<b>0.5-1分</b>不等;</li>
-        <ul>
-            <li>有帮助其他同事提供难题思路或者解决难题，每项<b>0.5分</b>.</li>
-            <li>有杰出的技术分享或报告，每项<b>0.5分</b>.</li>
-        </ul>
-        </li>
-    </ul>
+    <p>项目的KPI评价标准如下:</p>
+    <p>顺利完成所分配的内容工作的，计80分。</p>
+    <p>在量、质和团队写作三方面有下述突出贡献者，则以此加分累计，一般上不封顶。</p>
 
     <h3>工作量评测标准：</h3>
-    <p>bug修复任务，该任务量的评测标准如下：</p>
+    <p>通用基本评测标准</p>
     <ul style="margin-left:2rem;">
-        <li>高难度bug,预估超过5人天</li>
-        <li>中难度bug，预估超过3人天</li>
-        <li>低难度bug，预估超过1人天</li>
+        <li>工作量大或工作内容较高节奏，每项0.5分</li>
+        <li>如有未被规划的优异表现，每项0.5分</li>
+    </ul>
+    <h4 style="margin-left:1.5rem;">在不同开发阶段的突出表现举例</h4>
+    <h5 style="margin-left:2rem;margin-top:0;">研究阶段</h5>
+    <div style="margin-left:2rem;text-indent:2rem;">暂无</div>
+    <h5 style="margin-left:2rem;">开发阶段</h5>
+    <ul style="margin-left:2rem;">
+        <li>milestone正常推进加1分</li>
+        <li>完成计划外的新功能需求，每项0.5分</li>
+    </ul>
+    <h5 style="margin-left:2rem;">维护阶段</h5>
+    <ul style="margin-left:2rem;">
+        <li>修复重大bug，另加0.5分，封顶1分</li>
+    </ul>
+
+    <h3>工作品质评测标准：</h3>
+    <p>通用基本评测标准:</p>
+    <ul style="margin-left:2rem;">
+        <li>研究开发维护阶段中突破前沿技术、及时响应市场需求、或提高公司产品质量的，每项0.5分，封顶1分</li>
+        <li>简化工作流程、减少时间和开发成本，提高公司产品安全性的，每项0.5分</li>
+    </ul>
+    <h4 style="margin-left:1.5rem;">在不同开发阶段的突出表现举例</h4>
+    <h5 style="margin-left:2rem;margin-top:0;">研究/预研阶段</h5>
+    <ul style="margin-left:2rem;">
+        <li>对业务促进、打开市场有重要帮助的，每项0.5分，封顶1分</li>
+    </ul>
+    <h5 style="margin-left:2rem;margin-top:0;">开发阶段</h5>
+    <ul style="margin-left:2rem;">
+        <li>功能实现先于羡慕计划交付，每提前2-3人天，每项0.5分，封顶1分</li>
+    </ul>
+    <h5 style="margin-left:2rem;margin-top:0;">维护阶段</h5>
+    <ul style="margin-left:2rem;">
+        <li>单个项目bug修复先于预估2-3人天，每项0.5分，封顶1分</li>
+    </ul>
+
+    <h3>团队协作评测标准：</h3>
+    <p>通用基本评测标准:</p>
+    <ul style="margin-left:2rem;">
+        <li>有帮助其他同事提供难题思路或解决难题，每项0.5分，封顶1分[鼓励同项目或有关联的同事给予评分)</li>
+        <li>有技术分享或报告，每项0.5分</li>
     </ul>
 </div>
