--- a/public/css/root.css
+++ b/public/css/root.css
@@ -157,6 +157,14 @@ a{
     margin-left:1rem;
 }
 
+.contents h5{
+    font-size:inherit;
+    background:yellow;
+    display:inline-block;
+    padding-left:2px;
+    padding-right:2px;
+    margin-top:1rem;
+}
 .contents img{
     width:65%;
     margin-top:1rem;
