--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -43,7 +43,7 @@
         <a href="/tutorial" target="_blank">REFERENCE</a>
     </div>
 </div>
-<div id="statusBar"><a href="/" target="_self">首页</a> > 当前状态 > <span >{{project.status | status}}</span></div>
+<div id="statusBar"><a href="/" target="_self">首页</a> > 当前状态:<span >{{project.status | status}}</span></div>
 <div class="mainContents" ng-controller="infoCon">
     <div id="projectInfo">
         <div><div>platform:</div><div delivery-info info="platform"></div></div>
