--- a/view/projectInfo.html
+++ b/view/projectInfo.html
@@ -38,7 +38,6 @@
 <div id="header">
     <div style="margin-top:auto;margin-bottom:auto;margin-left:1.5rem;"><%- header %></div>
     <div id="headerButtons">
-        <a href="/doc" target="_blank">ASSET</a>
         <a href="/account" target="_blank">ACCOUNT</a>
         <a href="/tutorial" target="_blank">REFERENCE</a>
     </div>
@@ -219,23 +218,30 @@
                 <td>DOWNLOAD</td>
                 <td>HISTORY</td>
                 <td>REFERENCE</td>
+                <td></td>
             </tr>
-            <tr ng-show="docs.length === 0"><td colspan="6" style="text-align:center;">
+            <tr ng-show="docs.length === 0"><td colspan="7" style="text-align:center;">
                 <b>No record of bugs under this project</b>
             </td></tr>
             <tr ng-repeat="doc in docs">
                 <td>{{doc.name}}</td>
                 <td>{{doc.date | date:'&y-&m-&d &h:&i:&s'}}</td>
-                <td content-format contents="{{doc.description}}" style="width:20rem;"></td>
+                <td content-format contents="{{doc.description}}" style="width:15rem;"></td>
                 <td><b>{{doc.type | docType}}</b></td>
                 <td>
                     <div style="text-align:center;" ng-if="doc.link!==''"><a href="{{doc | docLink:'1'}}" target="_blank"><img src="{{doc | docIcon}}" style="width:1.2rem;"></a></div>
-                    <div ng-if="doc.link == ''"><button class="simpleBtnRight" ng-click="edit(doc)">ADD</button></div></td>
-                <td history-doc-list draft="{{doc.draft}}">
-
+                    <div style="text-align:center;"><button class="simpleBtnRight" ng-click="modify(doc)">{{doc.link === ''? 'ADD':'MODIFY'}}</button></div>
+                </td>
+                <td>
+                    <div ng-if="(doc.history && doc.history.length === 0) || !doc.history" style="margin-top:auto;margin-bottom:auto;">Not re-uploaded</div>
+                    <div style="display:flex;flex-direction:column;">
+                    <span ng-repeat="rec in doc.history">{{rec.date | date:'&y/&m/&d'}}<img src="{{rec.link | linkIcon}}" style="width:1.2rem;margin-left:0.5rem;"></span>
+                    </div>
                 </td>
                 <td content-format contents="{{doc.reference}}" style="width:15rem;"></td>
-            </tr>
+                <td style="padding-right:2rem;">
+                    <button class="closeButtonInline" ng-click="deleteDocument(doc)"><i class="fas fa-times-circle" style="transform:scale(1.5);"></i></button>
+                </td></tr>
         </table>
     </div>
 
