--- a/view/projectManager.html
+++ b/view/projectManager.html
@@ -6,10 +6,12 @@
     <title>Cidana 项目管理工具</title>
     <link href="/css/general.css" rel="stylesheet" type="text/css"/>
     <link href="/fontawesome/css/all.min.css" rel="stylesheet" type="text/css"/>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/1.3.4/jspdf.min.js"></script>
     <script src="/lib/lz-string.min.js"></script>
     <script src="/lib/angular.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/angular-cookies@1.5.9/angular-cookies.min.js"></script>
     <script>
-        var app = angular.module("dashboard",[]);
+        var app = angular.module("dashboard",['ngCookies']);
     </script>
     <script src="/js/dataManager.js"></script>
     <script src="/js/projectFilter.js"></script>
@@ -49,13 +51,18 @@
 <div id="header">
     <div style="margin-top:auto;margin-bottom:auto;margin-left:0.5rem;">Cidana项目管理工具</div>
     <div id="headerButtons">
-        <a href="/doc" target="_blank">ASSET</a>
         <a href="/account" target="_blank">ACCOUNT</a>
         <a href="/tutorial" target="_blank">REFERENCE</a>
         <a><button ng-click="logout()">LOGOUT</button></a>
     </div>
 </div>
 <div id="main">
+    <div style="display:flex;flex-direction:row;padding-top:1rem;">
+        <button class="printBtn"
+                ng-click="printHTML()"
+                ng-disabled="printing"
+                style="margin-left:auto;margin-right:3.5rem;"><i class="fa fa-print" style="margin-right:3px;"></i><span>Print weekly report</span></button>
+    </div>
     <div class="topBtnRow">
         <button id="statusButton" class="header_button" ng-click="switchFilter($event)" style="margin-left:4rem;height:2rem;margin-top:auto;margin-bottom:auto;">STATUS</button>
         <div style="position:relative;margin:auto;margin-left:0.5rem;">
@@ -79,9 +86,9 @@
             <button ng-repeat="account in accountList" ng-click="selectCompany(account,$event)">{{account.name}}</button>
         </div>
     </div>
-    <div style="margin-left:4rem;pointer-events:auto;height:1.5rem;">Total: {{maxCount}} Records</div>
+    <div style="margin-left:4rem;pointer-events:auto;height:1.5rem;" id="testDiv">Total: {{maxCount}} Records</div>
     <table id="projectTable">
-        <tr><td>Account</td><td>End Customer</td><td>Project name</td>
+        <tr><td>Account</td><td>Project name</td>
             <td>priority</td><td>schedule</td><td>product</td><td>owner</td><td>status</td><td>established</td></tr>
         <tr ng-repeat="entry in contents.entries"
             ng-mouseover="hoverPlink($event,true)"
@@ -89,7 +96,6 @@
             ng-click="goToProject(entry._id)"
             project-status schedule="{{entry.schedule}}" status="{{entry.status}}">
                 <td>{{entry.account | account}}</td>
-                <td>{{entry.endCustomer | account}}</td>
                 <td>{{entry.name}}</td>
                 <td>{{entry.priority}}</td>
                 <td>{{entry.schedule | date:"&y/&m/&d"}}</td>
